--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "coordinate-front",
+  "name": "coordinateFront",
   "version": "0.0.0",
   "description": "",
   "author": "leroydevelops <leroy.develops@gmail.com>",
   "main": "f/main/index.js",
   "dependencies": {
-    "mime": "^1.3.4"
+    "mime": "^1.3.4",
+    "vue2-google-maps": "^0.8.11"
   },
   "private": true,
   "stdlib": {
     "build": "faaslang",
-    "name": "leroydevelops/coordinate-front",
+    "name": "leroydevelops/coordinateFront",
     "timeout": 10000,
     "publish": true,
     "personalize": {
